<resources>
    <string name="app_name">My Jobs</string>
    <string name="pref_file_key">pref_file_key</string>
    <string name="pref_is_user_login">isuserlogin</string>
    <string name="pref_name_of_user">nameofuser</string>
    <string name="pref_id_of_user">idofuser</string>
    <string name="pref_name_of_pelamar">nameofpelamar</string>
    <string name="pref_id_of_pelamar">idofpelamar</string>

    <string name="picture">Picture</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confpassword">Confirm Password</string>
    <string name="action">Action</string>
    <string name="perusahaan">Perusahaan</string>
    <string name="pelamar">Pelamar</string>
    <string name="nama">Nama</string>
    <string name="alamat">Alamat</string>
    <string name="notelp">Nomor Telepon</string>
    <string name="notelepon">No. Telepon</string>
    <string name="email">Email</string>
    <string name="forgot">Forgot password?</string>
    <string name="signin">SIGN IN</string>
    <string name="signup">SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="create">Create New Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>