<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/myCoordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".User.Pelamar.Register.RegisterUserAct"
        android:background="@color/blueBackground">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="315dp"
                        android:background="@drawable/background_utama"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="80dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:elevation="5dp"
                        android:text="@string/app_name"
                        android:textSize="50sp"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:fontFamily="@font/mmedium"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="180dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:orientation="vertical"
                        android:background="@drawable/background_rounded34">

                        <EditText
                            android:id="@+id/txt_username"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="50dp"
                            android:layout_marginStart="30dp"
                            android:layout_marginEnd="30dp"
                            android:hint="@string/username"
                            android:inputType="text"
                            android:textSize="16sp"
                            android:textColor="@color/gray"
                            android:fontFamily="@font/mregular"/>

                        <EditText
                            android:id="@+id/txt_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:layout_marginStart="30dp"
                            android:layout_marginEnd="30dp"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:textSize="16sp"
                            android:textColor="@color/gray"
                            android:fontFamily="@font/mregular" />

                        <EditText
                            android:id="@+id/txt_nama"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:layout_marginStart="30dp"
                            android:layout_marginEnd="30dp"
                            android:hint="@string/nama"
                            android:inputType="text"
                            android:textSize="16sp"
                            android:textColor="@color/gray"
                            android:fontFamily="@font/mregular" />

                        <EditText
                            android:id="@+id/txt_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:layout_marginStart="30dp"
                            android:layout_marginEnd="30dp"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:textSize="16sp"
                            android:textColor="@color/gray"
                            android:fontFamily="@font/mregular" />

                        <EditText
                            android:id="@+id/txt_nomortelp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:layout_marginStart="30dp"
                            android:layout_marginEnd="30dp"
                            android:hint="@string/notelp"
                            android:inputType="number"
                            android:textSize="16sp"
                            android:textColor="@color/gray"
                            android:fontFamily="@font/mregular" />

                        <EditText
                            android:id="@+id/txt_alamat"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:layout_marginStart="30dp"
                            android:layout_marginEnd="30dp"
                            android:hint="@string/alamat"
                            android:inputType="text"
                            android:textSize="16sp"
                            android:textColor="@color/gray"
                            android:fontFamily="@font/mregular" />

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/btn_register"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="14dp"
                            android:layout_marginStart="24dp"
                            android:layout_marginEnd="24dp"
                            android:text="@string/create"
                            android:textSize="14sp"
                            android:textColor="@color/white"
                            android:fontFamily="@font/mregular"
                            android:background="@drawable/background_btn_blue"/>

                    </LinearLayout>

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/show_progress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:visibility="invisible">

                    <ProgressBar
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="14dp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="12dp"
                        android:gravity="center"
                        android:text="Please Wait..."/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>