<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/myCoordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".User.Pelamar.Login.LoginUserAct">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/blueBackground">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="315dp"
                    android:background="@drawable/background_utama"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="180dp"
                    android:layout_marginStart="30dp"
                    android:layout_marginEnd="30dp"
                    android:orientation="vertical"
                    android:background="@drawable/background_rounded34">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="30dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:elevation="5dp"
                        android:text="@string/app_name"
                        android:textSize="30sp"
                        android:textColor="@color/blueSecondary"
                        android:textAlignment="center"
                        android:textAllCaps="true"
                        android:fontFamily="@font/mmedium"/>

                    <EditText
                        android:id="@+id/txt_username"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:paddingStart="20dp"
                        android:hint="@string/username"
                        android:inputType="text"
                        android:textSize="16sp"
                        android:textColor="@color/gray"
                        android:fontFamily="@font/mregular"
                        android:background="@drawable/background_btn"/>

                    <EditText
                        android:id="@+id/txt_password"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:paddingLeft="20dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textSize="16sp"
                        android:textColor="@color/gray"
                        android:fontFamily="@font/mregular"
                        android:background="@drawable/background_btn"/>

                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:onClick="checkBoxClicked"
                        android:text="Remember Me"
                        android:textSize="14sp"
                        android:textColor="@color/gray"
                        android:fontFamily="@font/mregular"/>

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginEnd="24dp"
                        android:text="@string/login"
                        android:textSize="14sp"
                        android:textColor="@color/white"
                        android:fontFamily="@font/mregular"
                        android:background="@drawable/background_btn_blue"/>

                    <TextView
                        android:id="@+id/tv_createaccount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="30dp"
                        android:text="@string/create"
                        android:textSize="14sp"
                        android:textColor="@color/bluePrimary"
                        android:textAlignment="center"
                        android:fontFamily="@font/mregular"/>

                </LinearLayout>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/show_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:visibility="invisible">

                <ProgressBar
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginTop="14dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center"
                    android:text="Please Wait..."/>

            </LinearLayout>

        </LinearLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>